<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TocaSencillo</string>
    <string name="name">NOMBRE</string>
    <string name="name_cap">Nombre</string>
    <string name="mail">MAIL</string>
    <string name="password">CONTRASEÑA</string>
    <string name="login">REGISTRAR</string>
    <string name="enter">ENTRAR</string>
    <string name="logo">Logo</string>
    <string name="exit">SALIR</string>
    <string name="exit_camel_case">Salir</string>
    <string name="create_song">CREAR CANCIÓN</string>
    <string name="or_buttons">o</string>
    <string name="prefs_file">com.example.tocasencillo.PREFERENCE_FILE_KEY</string>
    <string name="default_tempo">120</string>
    <string name="default_song">Mi Canción</string>
    <string name="default_tune">C</string>
    <string name="bar">|</string>
    <string name="empty_bar" />
    <string name="add_song">Añadir nueva canción</string>
    <string name="songs">canciones</string>
    <string name="configuration">Configuración</string>
    <string name="add_frag">AGREGAR</string>
    <string name="save">GUARDAR</string>
    <string name="tag">tag</string>
    <string name="text_note">Introduce tu texto</string>
    <string name="title">Titulo</string>
    <string name="label">Etiqueta</string>
    <string name="intro">Intro</string>
    <string name="verse">Estrofa</string>
    <string name="pre_chorus">PreEstribillo</string>
    <string name="pre_chorus_simple">PreStrb</string>
    <string name="chorus">Estribillo</string>
    <string name="chorus_simple">Strb</string>
    <string name="bridge">Puente</string>
    <string name="solo">Solo</string>
    <string name="end">Final</string>
    <string name="content">Fragmento</string>
    <string name="_4_cc">4 cc</string>
    <string name="_8_cc">8 cc</string>
    <string name="_12_cc">12 cc</string>
    <string name="_16_cc">16 cc</string>
    <string name="text">Texto</string>
    <string name="repeat_x">x0</string>
    <string name="repeat_times">1. 2</string>
    <string name="alternate_ending">Final Alternativo</string>
    <string name="repeat">Repetición</string>
    <string name="x_times">xVeces</string>
    <string name="box">Casilla</string>
    <string name="x3_times">x3 veces</string>
    <string name="x4_times">x4 veces</string>
    <string name="options">Opciones</string>
    <string name="help">Ayuda</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="new_name">Nuevo Nombre</string>
    <string name="change_password">CAMBIAR CONTRASEÑA</string>
    <string name="instrument">INSTRUMENTO</string>
    <string name="instrument_cap">Instrumento</string>
    <string name="new_instrument">Nuevo Instrumento</string>
    <string name="old_password">antigua contraseña</string>
    <string name="new_password">nueva contraseña</string>
    <string name="send_mail">ENVIAR CORREO</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="forgotten_password">¿Has olvidado tu contraseña?</string>
    <string name="order_by">Ordenar por</string>
    <string name="func_not_available" tools:ignore="Typos">Función no disponible por el momento</string>
    <string name="have_pressed">¿Que has pulsado…?</string>
    <string name="delete_song">ELIMINAR CANCIÓN</string>
    <string name="are_you_sure">¿Estás seguro?</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="try_delete">ERROR, prueba otra vez a eliminar</string>
    <string name="try_save">ERROR, prueba otra vez a guardar</string>
    <string name="error_occurred">Ha surgido un error…</string>
    <string name="sure_exit">¿Seguro que quieres salir?</string>
    <string name="fb_integration">Integración de Firebase completada</string>
    <string name="enter_mail">Introduce tu email</string>
    <string name="email_sent">Se ha enviado un email, revisa tu correo</string>
    <string name="email_not_sent">No se ha podido enviar el email</string>
    <string name="already_registered">Usuario ya registrado\n prueba pulsando ENTRAR</string>
    <string name="pass_or_register">Asegúrate de que la contraseña es correcta o prueba a registrarte primero</string>
    <string name="error">ERROR</string>
    <string name="ok">OK</string>
    <string name="heart">&lt;3</string>
    <string name="exit_without_save">¿Seguro que quieres salir sin guardar?</string>
    <string name="nameless_song">Canción sin nombre</string>
    <string name="title_your_song">Ponle título a tu canción</string>
    <string name="already_exists">Esta canción ya existe</string>
    <string name="another_name">Prueba con otro nombre</string>
    <string name="ascending_date">Fecha Ascendente</string>
    <string name="descending_date">Fecha Descendente</string>
    <string name="ascending_name">Nombre Ascendente</string>
    <string name="descending_name">Nombre Descendente</string>
    <string name="ordering_error">Error al ordenar</string>
    <string name="sharp">#</string>
    <string name="flat">b</string>
    <string name="plus_tone">+1</string>
    <string name="plus_semitone" tools:ignore="TypographyFractions">+1/2</string>
    <string name="minus_semitone" tools:ignore="TypographyFractions">-1/2</string>
    <string name="minus_tone">-1</string>
</resources>