<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryDarkColor"
    android:orientation="vertical"
    tools:context=".AuthActivity">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        app:srcCompat="@mipmap/logo_transparent" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="36dp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:autofillHints="name"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/grayHint" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="24dp" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:autofillHints="emailAddress"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/grayHint" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="24dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="36dp" />

    <Button
        android:id="@+id/btnEnter"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/darkpink"
        android:text="@string/enter"
        android:textColor="#212121" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/or_buttons"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegister"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/lightpink"
        android:text="@string/login"
        android:textColor="#212121" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/tvForgottenPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/forgotten_password"
        android:textColor="@color/lightpink"
        android:background="@drawable/forgotten_password"
        android:textStyle="italic" />

</LinearLayout>