<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_gravity="center_horizontal"
    tools:context=".TitleFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:weightSum="13">

        <EditText
            android:id="@+id/tempo"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/default_tempo"
            android:inputType="number"
            android:autofillHints="tempo"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/title"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:hint="@string/default_song"
            android:gravity="center"
            android:importantForAutofill="auto"
            android:layout_weight="8"/>
        <EditText
            android:id="@+id/tune"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:hint="@string/default_tune"
            android:gravity="center"
            android:autofillHints="tune"
            android:layout_weight="3"/>

    </LinearLayout>

</FrameLayout>