<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="36dp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/primaryLightColor"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:text="@string/name" />

    <LinearLayout
        android:id="@+id/llName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="20"
            android:autofillHints="username"
            android:hint="@string/new_name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondaryColor"
            android:baselineAlignBottom="true"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_menu_save"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="36dp" />

    <TextView
        android:id="@+id/tvInstrument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/primaryLightColor"
        android:text="@string/instrument" />

    <LinearLayout
        android:id="@+id/llInstrument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etInstrument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="20"
            android:autofillHints="username"
            android:hint="@string/new_instrument"
            android:imeOptions="actionDone"
            android:inputType="textPersonName" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatInstrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondaryColor"
            android:baselineAlignBottom="true"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_menu_save"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="36dp" />

    <TextView
        android:id="@+id/changePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/primaryLightColor"
        android:text="@string/change_password" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="6dp" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/mail"
        android:layout_margin="8dp"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="6dp" />

    <Button
        android:id="@+id/btnPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send_mail" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="18dp" />

</LinearLayout>