<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".TitleBuild">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="13"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tempo"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:autofillHints="tempo"
            android:gravity="center"
            android:hint="@string/default_tempo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:hint="@string/default_song"
            android:importantForAutofill="auto" />

        <TextView
            android:id="@+id/tune"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:autofillHints="tune"
            android:gravity="center"
            android:hint="@string/default_tune" />

    </LinearLayout>

</LinearLayout>