<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AssemblyActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <RadioButton
                android:id="@+id/rbSharp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/sharp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <RadioButton
                android:id="@+id/rbFlat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flat" />
        </RadioGroup>

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvPlusTone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="@color/primaryDarkColor"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/plus_tone" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvPlusSemiTone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/primaryColor"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/plus_semitone" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvLessSemiTone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/primaryColor"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/minus_semitone" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvLessTone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@color/primaryDarkColor"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/minus_tone" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/scroll_song_border">

        <LinearLayout
            android:id="@+id/assemblySong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

</LinearLayout>