<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnAddFrag"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:text="@string/add_frag"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/btnSaveSong"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <EditText
        android:id="@+id/etMainTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:background="@color/lightpink"
        android:gravity="center|center_vertical"
        android:hint="@string/default_song"
        android:importantForAutofill="no"
        android:textColorHint="@color/grayHint"
        tools:ignore="TextFields,TouchTargetSizeCheck,TextContrastCheck" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:background="@drawable/scroll_song_border"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp">

        <LinearLayout
            android:id="@+id/contFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:src="@android:drawable/ic_delete"
        tools:ignore="ContentDescription,HardcodedText,SpeakableTextPresentCheck"/>

</LinearLayout>